<resources>
    <string name="app_name">calculadora</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="point">.</string>
    <string name="c">C</string>
    <string name="parg">(</string>
    <string name="pard">)</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="x">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="number_0">0</string>
    <string name="ln">ln</string>
    <string name="exp">exp</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
</resources>
