<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#C3D1CE"
        android:gravity="bottom"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/number_0"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_parg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_c" />

    <TextView
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_parg" />

    <TextView
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@+id/button_mult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_pard" />

    <TextView
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <TextView
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />

    <TextView
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_6"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toStartOf="@+id/button_min"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <TextView
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_7"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <TextView
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_8"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <TextView
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_9"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <TextView
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/button_0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <TextView
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E0F2F1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/point"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_eq"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <TextView
        android:id="@+id/button_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/c"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_parg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/button_parg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/parg"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/button_pard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_c"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/button_pard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/pard"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_3"
        app:layout_constraintEnd_toStartOf="@+id/button_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_parg"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/button_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/divide"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_pard"
        app:layout_constraintTop_toBottomOf="@+id/result_text" />

    <TextView
        android:id="@+id/button_mult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/x"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <TextView
        android:id="@+id/button_min"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_mult" />

    <TextView
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_eq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_min" />

    <TextView
        android:id="@+id/button_eq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E1F5FE"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/equal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

</androidx.constraintlayout.widget.ConstraintLayout>